--- a/frontend/mygrades.ui
+++ b/frontend/mygrades.ui
@@ -22,6 +22,11 @@
      <height>321</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
